<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.chip.Chip
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.Chip.Entry"
    android:id="@+id/chip"
    android:theme="@style/Theme.MaterialComponents.Light"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:checkable="false"
    android:enabled="false"
    android:textColor="@color/black"
    app:closeIconEnabled="true"
    app:closeIconTint="@color/black"
    />